# mixi2-application-sdk-rust

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  buf.gen.yaml  build.rs  go.mod  go.sum
.github/workflows/: ci.yml
auth/: auth.go  auth_test.go
auth/authtest/: fake_authenticator.go
event/: event_handler.go
event/eventtest/: event_handler.go
event/stream/: watcher.go  watcher_test.go
event/testutil/: crypto.go
event/webhook/: server.go  server_test.go
examples/: auth.rs  stream.rs  webhook.rs
src/: auth.rs  events.rs  lib.rs  proto.rs
